--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -181,7 +181,7 @@ background-color: rgb(232, 179, 54);</string>
             <item>
              <widget class="QLabel" name="inviteBalance">
               <property name="toolTip">
-               <string>Invites are distributed via a lottery in every block.</string>
+               <string>You have a limited number of Merit invites you can send to others.  Invites are distributed via a lottery in every block.  Use them wisely.</string>
               </property>
               <property name="text">
                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;0 &lt;/span&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;Available Invites&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -251,7 +251,7 @@ background-color: rgb(232, 179, 54);</string>
                </sizepolicy>
               </property>
               <property name="toolTip">
-               <string>Your Merit Alias is an optional unique identifier that others can use to send you Merit or request an invitation to the network.</string>
+               <string>Your Merit Alias is an (optional) easy way for users to find and send you Merit.  It also doubles as your invite code, when telling others about Merit.</string>
               </property>
               <property name="text">
                <string>Your Merit Alias:</string>
@@ -261,7 +261,7 @@ background-color: rgb(232, 179, 54);</string>
             <item row="1" column="0">
              <widget class="QLabel" name="label_7">
               <property name="toolTip">
-               <string>Others can use your full address to send you Merit or request an invitation to the network.</string>
+               <string>Users can also use your full address to send you Merit or request an invitation to the network.  If you do not create an alias, your address is the only way to identify you on the network.</string>
               </property>
               <property name="text">
                <string>Your Full Address:</string>
@@ -420,7 +420,7 @@ background-color: rgb(232, 179, 54);</string>
              </font>
             </property>
             <property name="toolTip">
-             <string>These are the addresses referred by you that are already confirmed and part of the Merit network.</string>
+             <string>These are the people referred and confirmed by you into the Merit network.  They are known as 'your community' and increase your likelihood of earning Ambassador Rewards.</string>
             </property>
             <property name="text">
              <string>Invites Sent</string>
